Bug 218192 - Image Editor blocks re-saving
Summary: Image Editor blocks re-saving
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Save (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-10 22:47 UTC by Simon
Modified: 2022-02-03 03:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2009-12-10 22:47:31 UTC
Version:           1.0.0 (rev.: 1060495) (using 4.3.2 (KDE 4.3.2), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.32-0.slh.2-sidux-686

To reproduce here:
* Open NEF RAW image in Image Editor
* Import it, «Save As» abc.jpg
* Change something, «Save»
digikam now shows the Save As dialog with the current filename (although the NEF image has already been saved as abc.jpg). When pressing enter, the dialog appears again (and so on). I do have to select a different name.
Comment 1 Marcel Wiesweg 2009-12-16 21:42:10 UTC
SVN commit 1063052 by mwiesweg:

Dont know why, but the readonly attribute was simply not set when saving to JPEG.
All other format worked.

BUG: 218192

 M  +2 -1      NEWS  
 M  +1 -0      libs/dimg/dimg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1063052
Comment 2 Simon 2010-01-25 15:15:33 UTC
Thanks :)