Dont know why, but the readonly attribute was simply not set when saving to JPEG. All other format worked.

BUG: 218192

svn path=/trunk/extragear/graphics/digikam/; revision=1063052